# NO1

./: CMakeLists.txt
day01/: day02.c  demo.c
day02/: demo.c  hello.c
day03/: demoo.c
day04/: dog.c  printfe.c
day05/: intt.c  inttt.c  tree.c
day06/: inta.c  short.c
day07/: eight.c  five.c  four.c  fourr.c  nine.c  oa.c  oone.c  op.c  ten.c  threee.c  twenty-two.c  twenty.c  ywoo.c
day08/: cann.c  floatttt.c  sf.c
day09/: dann.c  demo.c  qubie.c  rabbit.c
day10/: aaa.c  add.c  bbb.c  symbol.c
day11/: bre.c  cann.c  dow.c  idea.c  in.c  last.c  logic.c  ssss.c  taa.c  three.c  whileee.c
day12/: III.c  daa.c  els.c  es.cpp  esif.c  iff.c  uuu.c
day13/: getc.c  gotoo.c  observe.c  order.c  rether.c  score.c
day14/: array.c  catt.c  dddd.c  dede.c  horse.c  many.c  monkey.c
day15/: LLL.c  aacc.c  adh.c  cool.c  gcc.c  hhh.c  null.c  ox.c  ppn.c  real.c  speak.c
day16/: cold.c  fo.c  fre.c  ful.c  moll.c  of.c  oon.c  rain.c  scan.c  si.c
day17/: ccca.c  ddz.c  funny.c  hht.c  mainn.c  mimi.c  oo.c  out.c  pp.c  re.c  ret.c  shh.c
day18/: char2.c  char3.c  char4.c  char5.c  char6.c  char7.c  charone.c  charthree.c
day19/: struct.5.c  struct1.c  struct2.c  struct3.c  struct4.c  struct5.c  struct6.c  struct7.c  yt.c
day20/: demo.c  tail1.c  tail2.c  tail3.c
day21/: main.c
score/: student.c
task/: aaai.c  bf.c  fi.c  fid.c  my.c  name.c  neight.c  neleven.c  nfive.c  nfour.c  nine.c  nn.c  none.c  nseven.c  nsix.c  nten.c  nthire.c  nthree.c  ntow.c  ntwenty.c  prime.c  xx.c
woo/: four.c  one.c  three.c  two.c
