cmake_minimum_required(VERSION 3.23)
project(study_1 C)

set(CMAKE_C_STANDARD 99)


ADD_SUBDIRECTORY(day01)
ADD_SUBDIRECTORY(day02)
ADD_SUBDIRECTORY(day03)
ADD_SUBDIRECTORY(day04)
ADD_SUBDIRECTORY(day05)
ADD_SUBDIRECTORY(day06)
ADD_SUBDIRECTORY(day07)
ADD_SUBDIRECTORY(day08)
ADD_SUBDIRECTORY(day09)
ADD_SUBDIRECTORY(day10)
ADD_SUBDIRECTORY(day12)
ADD_SUBDIRECTORY(day13)
ADD_SUBDIRECTORY(day14)
ADD_SUBDIRECTORY(day15)
ADD_SUBDIRECTORY(day16)
ADD_SUBDIRECTORY(day17)
ADD_SUBDIRECTORY(day18)
ADD_SUBDIRECTORY(day19)
ADD_SUBDIRECTORY(day20)
ADD_SUBDIRECTORY(task)
ADD_SUBDIRECTORY(score)
ADD_SUBDIRECTORY(woo)
ADD_SUBDIRECTORY(day21)
